k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookies
  namespace: cookies
  labels:
    app: cookies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookies
  template:
    metadata:
      labels:
        app: cookies
    spec:
      containers:
        - name: cookies
          image: registry.kubero.acmelabs.nl/cookies:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
