k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cookies
  namespace: cookies
  labels:
    app: cookies
spec:
  selector:
    app: cookies
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
